# RAG_WITH_LANGCHAIN

./: .env.example  README.md  pyproject.toml  requirements.txt
RAG/: main.py
RAG/chroma_db/1d4528a4-3d21-44db-a091-c340ec74bf51/: index_metadata.pickle
RAG/documents_ingestion/: document_loader.py  documents_chunking.py  documents_embeddings_and_storing.py
RAG/retrieval_and_generation/: call_llm.py  prompt_template.py  rag_chain.py  retriever.py
app/: main.py  models.py  rag_engine.py
chroma_db/6e3e96f6-f2cb-4d4d-8118-daeafa612717/: index_metadata.pickle
