[project]
name = "rag-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "jq>=1.11.0",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community[sources]>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.5.0",
    "uvicorn>=0.47.0",
]
